tests/snapshots/contract_snapshot_exhaustive__exhaustive_config_backend_entry_mock.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: "BackendEntry::Mock {}"
---
{
  "type": "mock"
}
