tests/snapshots/contract_snapshot_exhaustive__exhaustive_config_backend_entry_sidecar_no_timeout.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: "BackendEntry::Sidecar\n{\n    command: \"python3\".into(), args: vec![\"sidecar.py\".into()], timeout_secs:\n    None,\n}"
---
{
  "type": "sidecar",
  "command": "python3",
  "args": [
    "sidecar.py"
  ]
}
