tests/snapshots/contract_snapshot_exhaustive__exhaustive_config_default.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: "BackplaneConfig::default()"
---
{
  "log_level": "info",
  "backends": {}
}
