tests/snapshots/contract_snapshot_exhaustive__exhaustive_config_mock_backend.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: cfg
---
{
  "default_backend": "mock",
  "log_level": "info",
  "backends": {
    "mock": {
      "type": "mock"
    }
  }
}
