tests/snapshots/contract_snapshot_exhaustive__exhaustive_config_with_policy_profiles.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: cfg
---
{
  "log_level": "info",
  "policy_profiles": [
    "policies/strict.json",
    "policies/read-only.json",
    "policies/ci.json"
  ],
  "backends": {}
}
