tests/snapshots/contract_snapshot_exhaustive__exhaustive_envelope_event_delta.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: env
---
{
  "t": "event",
  "ref_id": "run-exhaustive-001",
  "event": {
    "ts": "2025-07-01T12:00:00Z",
    "type": "assistant_delta",
    "text": "Here is "
  }
}
