tests/snapshots/contract_snapshot_exhaustive__exhaustive_envelope_event_file_changed.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: env
---
{
  "t": "event",
  "ref_id": "run-exhaustive-001",
  "event": {
    "ts": "2025-07-01T12:00:00Z",
    "type": "file_changed",
    "path": "src/main.rs",
    "summary": "Applied bug fix"
  }
}
